@@ -2653,7 +2653,7 @@ display_target_list ()
 	{
 	  if (bfd_get_error () != bfd_error_invalid_operation)
 	    nonfatal (p->name);
-	  bfd_close (abfd);
+	  bfd_close_all_done (abfd);
 	  continue;
 	}
 
@@ -2661,7 +2661,7 @@ display_target_list ()
 	if (bfd_set_arch_mach (abfd, (enum bfd_architecture) a, 0))
 	  printf ("  %s\n",
 		  bfd_printable_arch_mach ((enum bfd_architecture) a, 0));
-      bfd_close (abfd);
+      bfd_close_all_done (abfd);
     }
   unlink (dummy_name);
   free (dummy_name);
@@ -2730,7 +2730,7 @@ display_info_table (first, last)
 		putchar (' ');
 	      }
 	    if (abfd != NULL)
-	      bfd_close (abfd);
+	      bfd_close_all_done (abfd);
 	  }
 	putchar ('\n');
       }
